prevent invisible text when font is downloaded

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@
          url('../fonts/opensans-regular.ttf') format('truetype'),
          url('../fonts/opensans-regular.svg#LatoRegular') format('svg');
     font-weight: normal;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;
 
 }
 
@@ -20,7 +21,9 @@
          url('../fonts/opensans-bold.ttf') format('truetype'),
          url('../fonts/opensans-bold.svg#LatoRegular') format('svg');
     font-weight: normal;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;
+
 
 }
 
@@ -33,7 +36,9 @@
          url('../fonts/opensans-semibold.ttf') format('truetype'),
          url('../fonts/opensans-semibold.svg#open_sanssemibold') format('svg');
     font-weight: normal;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;
+
 
 }
 
@@ -121,7 +126,7 @@ header .burger_icon{
 	color: #43b779;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
 	font-size: 14px;
-
+	font-display: swap;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
